--- a/css/pa-article.css
+++ b/css/pa-article.css
@@ -73,12 +73,14 @@ html {
   font-family: 'Antic Didone', serif;
   font-size: 4em;
   color: white;
+  text-shadow: 1px 1px #000;
 }
 
 .article-desc{
   font-family: 'Muli', sans-serif;
   font-size: 1.2em;
   color: white;
+  text-shadow: 1px 1px #000;
 }
 
 .article-author{
@@ -734,6 +736,24 @@ h1{
   }
 }
 
+
+@media only screen and (max-width: 400px){
+  #topbar{
+    font-size: .5em;
+  }
+
+  #home{
+    font-size: .6em;
+  }
+
+  #social-icons{
+    font-size: .6em;
+  }
+
+  .centered{
+    top:60%;
+  }
+}
 
     /* scrollama */
 
