--- a/css/hogan.css
+++ b/css/hogan.css
@@ -71,12 +71,14 @@ html {
   font-family: 'Antic Didone', serif;
   font-size: 4em;
   color: white;
+  text-shadow: 1px 1px #000;
 }
 
 .article-desc{
   font-family: 'Muli', sans-serif;
   font-size: 1.2em;
   color: white;
+  text-shadow: 1px 1px #000;
 }
 
 .article-author{
@@ -520,7 +522,7 @@ h1{
     .hide-on-mobile{
       display: none;
     }
-    
+
   .article-title{
     font-size: 2.5em;
 
@@ -712,6 +714,25 @@ h1{
     display: none;
   }
 }
+
+@media only screen and (max-width: 400px){
+  #topbar{
+    font-size: .5em;
+  }
+
+  #home{
+    font-size: .6em;
+  }
+
+  #social-icons{
+    font-size: .6em;
+  }
+
+  .centered{
+    top:60%;
+  }
+}
+
 
 
 
