--- a/css/supreme-court.css
+++ b/css/supreme-court.css
@@ -72,12 +72,14 @@ html {
   font-family: 'Antic Didone', serif;
   font-size: 4em;
   color: white;
+  text-shadow: 1px 1px #000;
 }
 
 .article-desc{
   font-family: 'Muli', sans-serif;
   font-size: 1.2em;
   color: white;
+  text-shadow: 1px 1px #000;
 }
 
 .article-author{
@@ -634,7 +636,7 @@ h1{
   #social-icons{
     font-size: .8em;
   }
-  
+
   .hide-on-mobile{
     display: none;
   }
@@ -875,6 +877,25 @@ h1{
     display: none;
   }
 }
+
+@media only screen and (max-width: 400px){
+  #topbar{
+    font-size: .5em;
+  }
+
+  #home{
+    font-size: .6em;
+  }
+
+  #social-icons{
+    font-size: .6em;
+  }
+
+  .centered{
+    top:60%;
+  }
+}
+
 
 
 
