--- a/css/lomax.css
+++ b/css/lomax.css
@@ -29,7 +29,6 @@ html {
   font-size: 1.2em;
 }
 
-
 #tophat {
   color:white;
   font-family: 'Muli', sans-serif;
@@ -39,12 +38,6 @@ html {
   padding: 10px;
   position: fixed;
   width: 100%;
-}
-
-.photo-caption{
-  font-size: .9em;
-  font-family: 'Muli', sans-serif;
-  padding-top: 10px;
 }
 
 .col.one{
@@ -209,6 +202,7 @@ html {
 }
 
 
+
 .c3-event-rect{
   color: black !important;
 }
@@ -238,6 +232,12 @@ html {
 
   }
 
+  .end-gold{
+      font-family: 'Muli', sans-serif;
+      font-size: 1.25em;
+      color: white;
+      text-align: center;
+    }
  .date{
      font-size: 0.9375em;
      text-align: center;
@@ -265,6 +265,7 @@ a{
     text-decoration: underline;
     color: #FFDA94;
   }
+
 
   .data-viz{
   /*background-image: url("../images/black_paper.png");*/
@@ -451,12 +452,7 @@ font-size: 1.5em;
   color: #D9B269;
 }
 
-h1{
-  font-weight: 300;
-  text-align: center;
-  font-family: 'Muli', sans-serif;
-  font-size:2em;
-}
+
 
 .about{
   margin: 0 auto;
@@ -508,6 +504,20 @@ h1{
   p{
     width: 70%;
   }
+  .centered{
+    width: 80%;
+  }
+  .more{
+    width: 70%;
+  }
+
+  .about{
+    width: 60%;
+  }
+
+  .final-credits{
+    width: 60%;
+  }
 }
 
 @media only screen and (max-width: 600px) {
@@ -528,20 +538,14 @@ h1{
       display: none;
     }
 
-  .article-title{
-    font-size: 2.5em;
+    .article-title{
+      font-size: 3em;
 
+      }
+
+    .article-desc{
+      font-size: .9em;
     }
-
-  .article-desc{
-    padding-top: 50px;
-    font-size: .9em;
-  }
-
-  .centered {
-    top: 35%;
-  }
-
 
     p{
       font-size: 1.1em;
@@ -563,7 +567,6 @@ h1{
     .more{
       width: 80%;
     }
-
   .date{
     font-size: .8em;
   }
@@ -597,124 +600,11 @@ h1{
     font-size: .7em;
   }
 
-  .pa-county-title{
-    font-size: 1.2em;
-    padding-bottom: 15px;
-  }
-
-  .pa-county-description{
-    font-size: .9em;
-    padding-bottom: 15px;
-  }
-
-  .pa-county-author{
-    font-size: .7em;
-    padding-bottom: 15px;
-  }
-
-  .pa-county-credits{
-    font-size: .7em;
-  }
-
-  #mapid {
-    display: none;
-  }
-
-  #number{
-    font-size: 3em;
-  }
-
-  #smallnumber {
-    font-size: 1.5em;
-    padding-left: 7px;
-  }
-
-  #percentage {
-    font-size: .9em;
-    padding-left: 7px;
-  }
-
-  .county_nam{
-    font-size: 1.5em;
-  }
-
-  .total {
-  font-size: 1.2em;
-  }
-
-  .total_resentanced {
-    font-size: 1.2em;
-  }
-
-  .released {
-  font-size: 1.2em;
-  padding: 0;
-  padding-left: 7px;
-  }
-
-  .resentanced_nonlife {
-  font-size: 1.2em;
-  padding: 0;
-  padding-left: 7px;
-  }
-
-  .given_life {
-    font-size: 1.2em;
-    padding: 0;
-    padding-left: 7px;
-  }
-
-  .waiting_resentance {
-    font-size: 1.2em;
-    padding: 0;
-    padding-left: 7px;
-  }
-
-  .total_minority {
-    font-size: 1.2em;
-    padding-top: 0;
-    padding-left: 7px;
-  }
-
-  .total_white {
-    font-size: 1.2em;
-    padding: 0;
-    padding-left: 7px;
-  }
-  .asterisk {
-    font-size: 30px;
-    color: white;
-    text-align: left;
-    font-size: 1.5em;
-  }
-
-  .races {
-    font-size: .9em;
-    text-align: right;
-    color: white;
-    padding-top: 15px;
-    padding-right: 15px;
-
-    font-family: 'Antic Didone', serif;
-  }
 
   .hide-until-mobile{
     display: block;
   }
 
-  .pa-county-description{
-    display: none;
-  }
-
-  .pa-county-description-mobile{
-    display: block;
-    color: white;
-    font-size: .9em;
-    font-family: 'Muli', sans-serif;
-    width: 80%;
-    text-align: left;
-    padding-bottom: 10px;
-  }
 
   .hide{
     display: none;
@@ -726,6 +616,10 @@ h1{
     font-size: .5em;
   }
 
+  span.topbar-mobile{
+    display: none !important;
+  }
+
   #home{
     font-size: .6em;
   }
@@ -735,63 +629,15 @@ h1{
   }
 
   .centered{
-    top:60%;
+    width: 80%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .article-title{
+    font-size: 3em;
+  }
+
+  .article-desc{
+    font-size: 1em;
   }
 }
-
-
-
-    /* scrollama */
-
-    .scroll-graphic {
-      position: -webkit-sticky;
-      position: sticky;
-      top:0;
-      height: 50vh;
-    }
-
-    .step {
-      padding: 2rem;
-      height: 50vh;
-    }
-
-    .scroll-graphic-tab{
-      padding-top: 15px;
-      padding-bottom: 15px;
-    }
-
-
-    .col-graphic{
-      position: -webkit-sticky;
-      position: sticky;
-      bottom: 0;
-      background-color: white;
-    }
-
-
-
-
-
-    /* Large devices (desktops, 992px and up) */
-    @media (min-width: 992px) {
-
-      .scroll-graphic {
-        position: -webkit-sticky;
-        position: sticky;
-        top:0;
-        height: 100vh;
-      }
-
-      .step {
-        height: 100vh;
-      }
-
-      .col-graphic{
-        position: relative;
-      }
-
-      .scroll-text{
-        /* height: 100vh;
-        overflow: hidden; */
-      }
-    }
