--- a/css/style1.css
+++ b/css/style1.css
@@ -17,6 +17,27 @@ body{
 }
 
 
+.index-img {
+  max-width: 150px;
+  float: left;
+padding-top: 25px;
+padding-left: 25px;
+}
+
+.card-index {
+    position: relative;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid
+    rgba(0,0,0,.125);
+    border-radius: .25rem;
+    background-color: rgba(62,63,58,0.3);
+}
+
 #topbar{
   font-family: 'Antic Didone', serif;
   font-size: 1.125em;
