--- a/css/supreme-court.css
+++ b/css/supreme-court.css
@@ -9,6 +9,10 @@ html {
   width: 100%;
 }
 
+.icon-twitter, .icon-facebook {
+  cursor:pointer;
+}
+
 
 #topbar{
   font-family: 'Antic Didone', serif;
