--- a/css/three-states.css
+++ b/css/three-states.css
@@ -9,7 +9,9 @@ html {
   width: 100%;
 }
 
-
+.icon-twitter, .icon-facebook {
+  cursor:pointer;
+}
 
 #topbar{
   font-family: 'Antic Didone', serif;
@@ -598,9 +600,6 @@ a{
     }
     .state{
       font-size: 1.5em;
-    }
-    .more{
-      font-size: .8em;
     }
 
 }
