--- a/css/lomax.css
+++ b/css/lomax.css
@@ -112,14 +112,19 @@ html {
 
 
 
-  p{
-    font-family: 'Lora', serif;
-    font-size: 1.25em;
-    width: 60%;
-    margin: 0 auto;
-    line-height: 1.5em;
-    color:white;
-  }
+p{
+  font-family: 'Lora', serif;
+  font-size: 1.25em;
+  width: 60%;
+  margin: 0 auto;
+  line-height: 1.5em;
+  color:white;
+}
+
+.dateline{
+  font-size: 1.4em;
+  font-family: 'Muli', sans-serif;
+}
 
   .incarceration-graph{
     width: 60%;
