--- a/css/lomax.css
+++ b/css/lomax.css
@@ -121,6 +121,25 @@ p{
   color:white;
 }
 
+.pullquote {
+  border-left: 0.2em solid #D9B269;
+  font-family: 'Muli', sans-serif;
+  padding-left: 10px;
+  color: #FFDA94;
+  background-color: #3E3F3A;
+  font-size: 1.5em;
+  padding: 10px;
+  font-weight: bold;
+}
+
+.attribution{
+  color: white !important;
+  font-size: .9em;
+  font-style: italic;
+  font-weight: normal !important;
+}
+
+
 .dateline{
   font-size: 1.4em;
   font-family: 'Muli', sans-serif;
@@ -512,6 +531,11 @@ font-size: 1.5em;
   p{
     width: 70%;
   }
+
+  .pullquote{
+    width: 70%;
+  }
+
   .centered{
     width: 80%;
   }
@@ -558,6 +582,15 @@ font-size: 1.5em;
     p{
       font-size: 1.1em;
       width: 80%;
+    }
+
+    .pullquote{
+      width: 80%;
+      font-size: 1.1em;
+    }
+
+    .attribution{
+      font-size: .7em;
     }
 
     .incarceration-graph{
