--- a/css/glendening-effect.css
+++ b/css/glendening-effect.css
@@ -134,6 +134,18 @@ p{
   color:white;
 }
 
+.infobox{
+  border: 1px solid #FFDA94;
+  font-family: 'Muli', sans-serif;
+  font-size: 1.2em;
+  width: 60%;
+  margin: 0 auto;
+  line-height: 1.5em;
+  background-color:rgba(50, 50, 50, 0.4);
+  color:white;
+  padding:15px;
+}
+
 .dateline{
   font-size: 1.4em;
   font-family: 'Muli', sans-serif;
@@ -539,6 +551,10 @@ font-size: 1.5em;
     width: 70%;
   }
 
+  .infobox{
+    width: 70%;
+  }
+
   .incarceration-graph{
     width: 70%;
   }
@@ -594,6 +610,11 @@ font-size: 1.5em;
     p{
       font-size: 1.1em;
       width: 80%;
+    }
+
+    .infobox{
+      width: 80%;
+      font-size: 1.1em;
     }
 
     .video-content{
