--- a/css/style1.css
+++ b/css/style1.css
@@ -302,6 +302,53 @@ img {
   cursor:pointer;
 }
 
+.sponsor {
+  max-width:200px;
+  margin:0 auto;
+}
+
+.row-sponsor2 {
+  margin: 0 auto;
+  width: 100%;
+  background-color: white;
+ }
+
+ .row-sponsor {
+  text-align:center;
+  margin-bottom:20px;
+}
+
+#hc {
+  display: block;
+  width: 30%;
+}
+
+#cns {
+  display: block;
+  width: 30%;
+}
+
+#pbs {
+  display: block;
+  width: 50%;
+}
+
+#merrill {
+  display: block;
+  width: 50%;
+}
+
+#acf {
+  display: block;
+  width: 50%;
+}
+
+#shf {
+  display: block;
+  width: 50%;
+}
+
+
 /* Media Queries*/
 
 @media(max-width:1024px){
