--- a/css/pa-article.css
+++ b/css/pa-article.css
@@ -500,6 +500,53 @@ font-size: 1.5em;
   margin-top: 0;
 }
 
+.sponsor {
+  max-width:200px;
+  margin:0 auto;
+}
+
+.row-sponsor2 {
+  margin: 0 auto;
+  width: 100%;
+  background-color: white;
+ }
+
+ .row-sponsor {
+  text-align:center;
+  margin-bottom:20px;
+}
+
+#hc {
+  display: block;
+  width: 30%;
+}
+
+#cns {
+  display: block;
+  width: 30%;
+}
+
+#pbs {
+  display: block;
+  width: 50%;
+}
+
+#merrill {
+  display: block;
+  width: 50%;
+}
+
+#acf {
+  display: block;
+  width: 50%;
+}
+
+#shf {
+  display: block;
+  width: 50%;
+}
+
+
 @media(max-width:1024px){
   #topbar{
     font-size: .8em;
