--- a/css/style1.css
+++ b/css/style1.css
@@ -309,8 +309,9 @@ img {
 
 .row-sponsor2 {
   margin: 0 auto;
-  width: 100%;
-  background-color: white;
+  width: 50%;
+  /*background-color: white; */
+  background-image: url("../images/black_paper.png");
  }
 
  .row-sponsor {
@@ -320,12 +321,12 @@ img {
 
 #hc {
   display: block;
-  width: 30%;
+  width: 50%;
 }
 
 #cns {
   display: block;
-  width: 30%;
+  width: 50%;
 }
 
 #pbs {
