--- a/css/lifer-profiles.css
+++ b/css/lifer-profiles.css
@@ -533,50 +533,59 @@ font-family: 'Antic Didone', serif;
   font-family: 'Antic Didone', serif;
 }
 
+.sponsor-row{
+  width:60%;
+  margin: 0 auto;
+}
+
+.sponsor-row2{
+  width:60%;
+  margin: 0 auto;
+}
+
 .sponsor {
-  max-width:200px;
   margin:0 auto;
 }
 
 .row-sponsor2 {
+  width:50%;
   margin: 0 auto;
-  width: 100%;
-  background-color: white;
  }
 
  .row-sponsor {
   text-align:center;
   margin-bottom:20px;
+  width: 50%;
 }
 
 #hc {
   display: block;
-  width: 30%;
+  width: 60%;
 }
 
 #cns {
   display: block;
-  width: 30%;
+  width: 60%;
 }
 
 #pbs {
   display: block;
-  width: 50%;
+  width: 60%;
 }
 
 #merrill {
   display: block;
-  width: 50%;
+  width: 80%;
 }
 
 #acf {
   display: block;
-  width: 50%;
+  width: 80%;
 }
 
 #shf {
   display: block;
-  width: 50%;
+  width: 80%;
 }
 
 
