--- a/css/lomax.css
+++ b/css/lomax.css
@@ -130,6 +130,7 @@ p{
   font-size: 1.5em;
   padding: 10px;
   font-weight: bold;
+  margin-bottom: 2.2em;
 }
 
 .attribution{
@@ -509,53 +510,49 @@ font-size: 1.5em;
   margin-top: 0;
 }
 
-.sponsor {
-  max-width:200px;
-  margin:0 auto;
+.sponsor-row{
+  width:60%;
+  margin: 0 auto;
 }
 
-.row-sponsor2 {
+.sponsor-row2{
+  width:60%;
   margin: 0 auto;
-  width: 100%;
-  background-color: white;
- }
+}
 
- .row-sponsor {
-  text-align:center;
-  margin-bottom:20px;
+.sponsor {
+  margin:0 auto;
 }
 
 #hc {
   display: block;
-  width: 30%;
+  width: 60%;
 }
 
 #cns {
   display: block;
-  width: 30%;
+  width: 60%;
 }
 
 #pbs {
   display: block;
-  width: 50%;
+  width: 60%;
 }
 
 #merrill {
   display: block;
-  width: 50%;
+  width: 80%;
 }
 
 #acf {
   display: block;
-  width: 50%;
+  width: 80%;
 }
 
 #shf {
   display: block;
-  width: 50%;
+  width: 80%;
 }
-
-
 
 
 
@@ -670,6 +667,10 @@ font-size: 1.5em;
 
   #tophat{
     font-size:.9em;
+  }
+
+  .pullquote{
+    display: none;
   }
 
   .chart-title{
